<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <Button
        android:id="@+id/savebtn"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button1"
        android:fontFamily="sans-serif"
        android:onClick="SaveUser"
        android:text="Save"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/uploadbtn"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:background="@drawable/button1"
        android:fontFamily="sans-serif"
        android:onClick="uploadPhoto"
        android:text="Update your photo"
        android:textColor="@android:color/background_light" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="116dp"
        android:stretchColumns="1">


        <EditText
            android:id="@+id/nameval"
            android:layout_width="104dp"
            android:gravity="center"
            android:hint="Full Name"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TableRow>

            <ImageView
                android:layout_width="106dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/mailing" />

            <TextView
                android:id="@+id/emailval"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="Email"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textSize="17dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/mobilephone" />

            <EditText
                android:id="@+id/numberval"
                android:layout_width="wrap_content"
                android:hint="Contact Number"
                android:inputType="phone"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textSize="17dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/balloons" />

            <EditText
                android:id="@+id/dobval"
                android:layout_width="wrap_content"
                android:hint="Date of Birth"
                android:inputType="date"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textSize="17dp" />

        </TableRow>
    </TableLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile"
        android:layout_width="195dp"
        android:layout_height="176dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:src="@drawable/camerashutter" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/background_light"
        android:elevation="10dp"
        android:indeterminateTint="#57bab7"
        android:progressBackgroundTint="@android:color/background_light"
        android:progressBackgroundTintMode="src_over"
        android:visibility="visible" />

</RelativeLayout>