<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="4dp">


        <TextView
            android:id="@+id/lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="239dp"
            android:text="Password:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="243dp"
            android:text="Email:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="162dp"
            android:text="Enter your email and password to register"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="239dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="186dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center" />


        <Button
            android:id="@+id/registerbtn"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="47dp"
            android:background="@drawable/mybuttons"
            android:onClick="clickRegister"
            android:text="Register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="332dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:src="@drawable/logo3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</android.widget.RelativeLayout>